Revert "fix: complete Nagram 12.10 source dependency sync"
This reverts commit b79caa8f71d0931fe0a27ae2a35d9f5aa0bb54bb.